<resources>
    <string name="app_name">PaceExchange</string>

    <string name="home_button">HOME</string>
    <string name="post_button">POST</string>
    <string name="search_button">SEARCH</string>
    <string name="shop_button">SHOP</string>
    <string name="profile_button">PROFILE</string>
    <string name="my_items">My Items</string>
    <string name="my_likes">My Likes</string>
    <string name="sign_out">Sign Out</string>
    <string name="fist_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="two_string_with_space">%1$s %2$s</string>
    <string name="two_string_with_star">%1$s*%2$s</string>

    <string name="do_not_have_an_account_sign_up">Do not have an account?</string>
    <string name="unable_to_sign_in">Failed to sign in. Please check the inputs.</string>
    <string name="already_have_an_account_sign_in">Already have an account?</string>
    <string name="failed_to_sign_up">Failed to sign up.</string>
    <string name="dialog_select_photo">SelectPhoto</string>
    <string name="dialog_select_gender">SelectGender</string>
    <string name="dialog_select_graduation_year">SelectGraduationYear</string>
    <string name="this_field_cannot_be_blank">This field cannot be blank.</string>

    <!-- Tags in layout fragment_view_post -->
    <string name="save_post">SAVE THIS</string>
    <string name="start_offer">START OFFER</string>
    <string name="toast_add_to_likes">Post is saved</string>
    <string name="toast_remove_from_likes">Post is removed</string>

    <!-- Tags in layout activity offer inventory -->
    <string name="choose_my_item_to_barter">Choose my item</string>
    <string name="cancel_button">CANCEL</string>
    <string name="confirm_offer">CONFIRM</string>
    <string name="toast_please_select_an_item">Please select an item to barter.</string>
    <string name="toast_offer_created">An offer is created.</string>

    <!-- Database nodes -->
    <string name="node_users">Users</string>
    <string name="node_posts">posts</string>
    <string name="node_likes">likes</string>
    <string name="node_inventories">inventories</string>
    <string name="node_offer_received">offer_received</string>
    <string name="node_offer_send">offer_send</string>
    <string name="node_offer_confirmed">offer_confirmed</string>
    <string name="node_offers">offers</string>

    <!-- Database field names -->
    <string name="field_title">title</string>
    <string name="field_post_id">post_id</string>
    <string name="field_description">description</string>
    <string name="field_image">image</string>
    <string name="field_status">status</string>
    <string name="field_first_name">first_name</string>
    <string name="field_last_name">last_name</string>
    <string name="field_email">email</string>
    <string name="field_user_id">user_id</string>

    <!-- Intent extras and Bundle arguments -->
    <string name="arg_user_id">arg_user_id</string>
    <string name="arg_post_id">arg_post_id</string>
    <string name="arg_special_code">arg_special_code</string>
    <string name="extra_user">extra_user</string>
    <string name="extra_post_id">extra_post_id</string>

    <!-- Fragment names -->
    <string name="fragment_search">Search</string>
    <!--<string name="fragment_view_post">ViewPost</string>-->
    <string name="fragment_my_items">MyItemsFragment</string>
    <string name="fragment_my_profile_2">MyProfile2</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="optional">Optional</string>
    <string name="graduation_year">Graduation Year</string>
    <string name="email">Email</string>
    <string name="fragment_my_likes">MyLikesFragment</string>
    <string name="fragment_view_post">ViewPostFragment</string>
    <string name="fragment_offer_received">OfferReceivedFragment</string>
    <string name="fragment_offer_send">OfferSendFragment</string>
    <string name="fragment_offer">OfferFragment</string>
    <string name="fragment_offer_inventory">OfferInventoryFragment</string>
    <string name="fragment_shop">ShopFragment</string>
    <string name="fragment_post">PostFragment</string>
    <string name="fragment_profile">ProfileFragment</string>
    <string name="post">Post</string>
    <string name="shop">Shop</string>
    <string name="profile">Profile</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="unspecified">Unspecified</string>
    <string name="remove_post">REMOVE</string>

    <string name="toast_post_removed">Your post is removed successfully.</string>
    <string name="update_post">UPDATE</string>
    <string name="save_button">SAVE</string>
    <string name="hint_title">Title</string>
    <string name="view_post">View Post</string>
    <string name="my_profile">My Profile</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toast_please_fill_out_all_the_fields">Please fill out all the fields.</string>
    <string name="toast_post_updated">Post is updated.</string>
    <string name="node_sender_id">sender_id</string>
    <string name="node_receiver_id">receiver_id</string>
    <string name="please_sign_in_with_your_pace_email">Please sign in with your pace email.</string>
    <string name="email_suffix">\@pace.edu</string>
    <string name="remove_button">REMOVE</string>


    <!-- Tool bar texts -->
    <string name="offer">Offer</string>
    <string name="offer_received">Received</string>
    <string name="offer_send">Send</string>
    <string name="offer_confirmed">Confirmed</string>

    <string name="item_inactive">INACTIVE</string>
    <string name="password">Password</string>
    <string name="button_login">Login</string>
    <string name="button_sign_up">SIGN UP</string>
    <string name="create_account">Create Account</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_pace_email">Pace Email</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_password">Password</string>
    <string name="button_sign_in">Sign In</string>
    <string name="dialog_year_text">Year</string>
    <string name="dialog_gender_text">Gender</string>
    <string name="dialog_select_photo_choose_photo_from_memory">Choose photo from memory</string>
    <string name="dialog_select_photo_take_a_photo">Take a Photo</string>
    <string name="my_profile_fragment_edit_text">Edit</string>
    <string name="hint_description">Description</string>
    <string name="arg_post_status">arg_post_status</string>
    <string name="please_sign_up_with_your_pace_email">Please sign up with your pace email.</string>
    <string name="your_password_must_be_at_least_10_characters">\"Your password must be at least 10 characters.\"</string>
    <string name="finished_button">FINISHED</string>
    <string name="offer_canceled_toast">Offer Canceled</string>
</resources>
