<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:background="@drawable/grey_border_bottom">

    <ImageView
        android:id="@+id/offer_receiver_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:padding="2dp"
        android:background="@drawable/purple_blue_border_around"
        />
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_swap_horiz_24dp"/>
    <ImageView
        android:id="@+id/offer_sender_image"
        android:padding="2dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/purple_blue_border_around"/>
    <LinearLayout
        android:layout_marginStart="10dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <Button
            android:id="@+id/offer_accept_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            android:textColor="@color/White"
            android:background="@drawable/post_bt_ui"
            android:minHeight="35dp"
            android:focusableInTouchMode="false"
            android:focusable="false"/>
        <Button
            android:id="@+id/offer_reject_button"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reject"
            android:textColor="@color/White"
            android:background="@drawable/post_bt_ui"
            android:minHeight="35dp"
            android:focusableInTouchMode="false"
            android:focusable="false"/>
        <Button
            android:id="@+id/offer_cancel_button"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button"
            android:textColor="@color/White"
            android:background="@drawable/post_bt_ui"
            android:minHeight="35dp"
            android:focusableInTouchMode="false"
            android:focusable="false"
            android:visibility="gone"/>

    </LinearLayout>



</LinearLayout>