<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MyProfileFragment"
    android:background="@color/lightGrey">


    <android.support.design.widget.AppBarLayout
            android:id="@+id/my_profile_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            >
        <android.support.v7.widget.Toolbar
            android:id="@+id/my_profile_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            />
    </android.support.design.widget.AppBarLayout>


<RelativeLayout
    android:layout_below="@id/my_profile_toolbar_layout"
    android:layout_marginTop="50dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp">
    <TextView
        android:padding="10dp"
        android:id="@+id/my_profile_name_text"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:gravity="end"
        android:text="@string/name"
        android:paddingEnd="10dp"
        android:background="@color/White"
        />
    <TextView
        android:padding="10dp"
        android:layout_marginStart="1dp"
        android:id="@+id/my_profile_name"
        android:layout_alignTop="@id/my_profile_name_text"
        android:paddingStart="10dp"
        android:layout_toEndOf="@+id/my_profile_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="Barterapp"
        android:background="@color/White"
        />
    <TextView
        android:padding="10dp"
        android:layout_marginTop="1dp"
        android:id="@+id/my_profile_email_text"
        android:layout_below="@id/my_profile_name_text"
        android:layout_width="match_parent"
        android:layout_alignEnd="@id/my_profile_name_text"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:gravity="end"
        android:text="@string/email"
        android:paddingEnd="10dp"
        android:background="@color/White"
        />
    <TextView
        android:padding="10dp"
        android:layout_marginStart="1dp"
        android:id="@+id/my_profile_email"
        android:layout_alignTop="@id/my_profile_email_text"
        android:paddingStart="10dp"
        android:layout_toEndOf="@+id/my_profile_email_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="Barterapp"
        android:background="@color/White"
        />
    <TextView
        android:padding="10dp"
        android:layout_marginTop="1dp"
        android:id="@+id/my_profile_gender_text"
        android:layout_below="@id/my_profile_email_text"
        android:layout_alignEnd="@id/my_profile_email_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:gravity="end"
        android:text="@string/gender"
        android:paddingEnd="10dp"
        android:background="@color/White"
        />
    <TextView
        android:padding="10dp"
        android:layout_marginStart="1dp"
        android:id="@+id/my_profile_gender"
        android:layout_toEndOf="@+id/my_profile_gender_text"
        android:layout_alignTop="@id/my_profile_gender_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:paddingStart="10dp"
        android:hint="@string/optional"
        android:background="@color/White"
        />
    <TextView
        android:padding="10dp"
        android:layout_marginTop="1dp"
        android:id="@+id/my_profile_graduation_year_text"
        android:layout_below="@id/my_profile_gender_text"
        android:layout_alignEnd="@id/my_profile_gender_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:gravity="end"
        android:text="@string/graduation_year"
        android:paddingEnd="10dp"
        android:background="@color/White"
        />
    <TextView
        android:padding="10dp"
        android:layout_marginStart="1dp"
        android:id="@+id/my_profile_graduation_year"
        android:layout_toEndOf="@+id/my_profile_graduation_year_text"
        android:layout_alignTop="@id/my_profile_graduation_year_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:paddingStart="10dp"
        android:hint="@string/optional"
        android:background="@color/White"
        android:layout_alignBottom="@id/my_profile_graduation_year_text"
        />
    </RelativeLayout>


</RelativeLayout>