<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.pace_exchange.OfferInventoryFragment">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/offer_inventory_toolbar_layout">

        <android.support.v7.widget.Toolbar
            android:id="@+id/offer_inventory_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/choose_my_item_to_barter"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_below="@id/offer_inventory_toolbar_layout"
        android:id="@+id/offer_inventory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/offer_inventory_button_relLayout"/>

    <RelativeLayout
        android:id="@+id/offer_inventory_button_relLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/confirm_offer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/White"
            android:text="@string/confirm_offer"
            android:textAlignment="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@drawable/post_bt_ui" />

        <TextView
            android:id="@+id/cancel_offer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/confirm_offer_button"
            android:layout_marginStart="20dp"
            android:textSize="18sp"
            android:textColor="@color/White"
            android:text="@string/cancel_button"
            android:textAlignment="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@drawable/post_bt_ui" />

    </RelativeLayout>

</RelativeLayout>
