<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/lightGrey">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        >

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:popupTheme="@style/AppTheme.PopupOverlay">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/offer_inventory_backArrow"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_back_arrow"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/offer_inventory_backArrow"
                android:layout_centerInParent="true"
                android:text="@string/choose_my_item_to_barter"
                android:paddingLeft="70dp"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                 />

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/offer_inventory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center_horizontal"
       android:layout_marginTop="20dp"
       android:layout_marginBottom="20dp">

       <TextView
           android:id="@+id/confirm_offer_button"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="18sp"
           android:textColor="@color/White"
           android:text="@string/confirm_offer"
           android:textAlignment="center"
           android:paddingTop="10dp"
           android:paddingBottom="10dp"
           android:paddingStart="20dp"
           android:paddingEnd="20dp"
           android:background="@drawable/post_bt_ui" />

       <TextView
           android:id="@+id/cancel_offer_button"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_toEndOf="@id/confirm_offer_button"
           android:layout_marginStart="20dp"
           android:textSize="18sp"
           android:textColor="@color/White"
           android:text="@string/cancel_button"
           android:textAlignment="center"
           android:paddingTop="10dp"
           android:paddingBottom="10dp"
           android:paddingStart="20dp"
           android:paddingEnd="20dp"
           android:background="@drawable/post_bt_ui" />

   </RelativeLayout>

</LinearLayout>