<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PostFragment">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/post_tool_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/post_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:id="@+id/post_toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_gravity="center" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/post_tool_bar_layout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/relLayout1"
            android:background="@color/lightGrey">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/post_image"
                android:layout_marginTop="15dp"
                android:layout_centerHorizontal="true"
                android:scaleType="centerCrop"
                android:background="@drawable/grey_bg_add_white_plus" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@+id/post_image"
                android:id="@+id/relLayout2"
                android:layout_marginTop="30dp"
                android:background="@color/White">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/input_title"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:background="@null"
                    android:maxLines="2"
                    android:hint="@string/hint_title"
                    android:textColor="@color/Black"
                    android:padding="10dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/White"
                android:id="@+id/relLayout3"
                android:layout_below="@id/relLayout2"
                android:layout_marginTop="10dp"
                android:padding="10dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:id="@+id/input_description"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:maxLines="20"
                    android:background="@null"
                    android:hint="Description"
                    android:textColor="@color/Black"
                    android:gravity="start" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relLayout3"
                android:background="@color/White"
                android:layout_marginTop="10dp"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_post"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:layout_marginBottom="35dp"
                    android:text="@string/post_button"
                    android:layout_marginEnd="100dp"
                    android:layout_marginStart="100dp"
                    android:textColor="@color/White"
                    android:background="@drawable/post_bt_ui" />

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:layout_marginBottom="35dp"
                    android:text="@string/save_button"
                    android:textColor="@color/White"
                    android:background="@drawable/post_bt_ui"
                    android:visibility="invisible"/>

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/btn_save"
                    android:layout_marginTop="35dp"
                    android:layout_marginBottom="35dp"
                    android:layout_marginStart="15dp"
                    android:text="@string/cancel_button"
                    android:textColor="@color/White"
                    android:background="@drawable/post_bt_ui"
                    android:visibility="invisible"/>

            </RelativeLayout>

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

</RelativeLayout>